# italian-rap-songs

./: .gitignore
clustering/: density_based.ipynb  hierarchical.ipynb  kmeans.ipynb  main.py  preprocess.py  pyproject.toml  xmeans_kmedoids.ipynb
clustering/clustering/: benchmark_utils.py  cluster_utils.py  evaluations.py  mixed_type.py  preprocess.py
clustering/clustering/implementations/: all_to_all_autoencoder.py  cat_to_cat_autoencoder.py  kamila.py  kprototypes.py  torch_utils.py
clustering/data/tabular/: info.json
data_understanding/: tracks_analysis.ipynb
dataset/: final_model_data.csv
predictive_analysis/: predictions copy.ipynb  predictions.ipynb
